Optimaise canvas load

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <title>My Portfolio</title>
 </head>
 
-<body style="overflow-x: hidden;">
-  <div id="root"></div>
+<body style="overflow-x: hidden; z-index: -20; position: relative;">
+  <div id="root" style="z-index: -20; position: relative;"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
