--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
   <link rel="manifest" href="/favicons/site.webmanifest">
 
-  <title>My Portfolio</title>
+  <title>Shivendra Dwivedi</title>
 </head>
 
 <body style="overflow-x: hidden; z-index: -20; position: relative;">
